<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Измеритель продуктов</string>
    <string name="textchose">Здраствуйте! Выберите продукт</string>
    <string name="kz">🇰🇿</string>
    <string name="gb">🇬🇧</string>
    <string name="ru">🇷🇺</string>
    <string name="product">Вода</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="salt">Соль</string>
    <string name="vegetable_oil">Растительное\nмасло</string>
    <string name="butter">Сливочное\nмасло</string>
    <string name="liquid_products">Жидкие продукты</string>
    <string name="crumbly_products">Рассыпчатые продукты</string>
    <string name="oils">Масла</string>
    <string name="cream">Сметана</string>
    <string name="honey">Мёд</string>
    <string name="kefir">Кефир</string>
    <string name="rice">Рис</string>
    <string name="curd">Творог</string>
    <string name="soda">Сода</string>
    <string name="icingSugar">Сахарная пудра</string>
    <string name="flour">Мука</string>
    <string name="semolina">Манка</string>
    <string name="hercules">Геркулес</string>
    <string name="starch">Крахмал</string>
    <string name="buckwheat">Гречка</string>
    <string name="cacao">Какао</string>
    <string name="clarified_butter">Топлёное масло</string>
    <string name="cups">граненых стаканов(200 мл)</string>
    <string name="glass">стаканов(250 мл)</string>
    <string name="tablespoon">столовых ложек</string>
    <string name="teaspoon">чайных ложек</string>
    <string name="calculate">Вычеслить</string>
    <string name="info_for_toast">Введите данные!</string>
    <string name="write_in_gram">Введите в грамах</string>
    <string name="write_in_milligram">Введите в миллиграммах</string>
    <string name="grams">В граммах</string>
    <string name="milligrams">В миллилитры</string>
    <string name="quotations1">__________________\nАс тұрған жерде ауру тұрмайды.\n__________________</string>
    <string name="quotations2">__________________\nТату үйдің тамағы тәтті.\n__________________</string>
    <string name="quotations3">__________________\nАс – адамның арқауы.\nТабағымен жақсы\n__________________</string>
    <string name="quotations4">__________________\nНан— тамақтың атасы\nЫнтымақ — көптің батасы\n__________________</string>
    <string name="quotations5">__________________\nАты бардың тынысы бар.\nАсы бардың ырысы бар.\n__________________</string>
    <string name="quotations6">__________________\nАс жүрген жер — береке,\nЖас жүрген жер — мереке\n__________________</string>
    <string name="quotations7">__________________\nТұзсыз май татымсыз,\nҚантсыз шай татымсыз.\n__________________</string>
    <string name="quotations8">__________________\nНан бар жерде ән бар\n__________________</string>
    <string name="quotations9">__________________\nТату үйдiң тамағы тәттi.\n__________________</string>
</resources>