<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/backButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:rotation="180"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/nextbutton" />

        <TextView
            android:id="@+id/textViewProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/product"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="82dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="46dp"
            android:background="@drawable/rounded_background_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton">

            <ImageView
                android:id="@+id/imageViewProduct"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="91dp"
                app:layout_constraintBottom_toTopOf="@+id/radioGroupMode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/water_icon" />


            <RadioGroup
                android:id="@+id/radioGroupMode"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewProduct"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/gramMode"
                    android:textColor="@color/black"
                    android:text="@string/grams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/millilitreMode"
                    android:textColor="@color/black"
                    android:text="@string/milligrams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="36dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/write_in_gram"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textViewGlass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupMode" />

            <TextView
                android:id="@+id/textViewGlass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="9dp"
                android:gravity="center"
                android:text="@string/cups"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/textViewTablespoon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextProduct" />

            <TextView
                android:id="@+id/textViewTablespoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="11dp"
                android:gravity="center"
                android:text="@string/tablespoon"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/textViewTeaspoon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGlass" />

            <TextView
                android:id="@+id/textViewTeaspoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/teaspoon"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/buttonCalculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTablespoon" />

            <Button
                android:id="@+id/buttonCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/calculate"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTeaspoon" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>